<resources>
    <string name="app_name">HI DOCTOR</string>

    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="emailProfil">Email : jastindrewbieber@gmail.com</string>
    <string name="nameProfil">Justin Drew Bieber</string>
    <string name="idProfil">\@justinbieber</string>
    <string name="phoneProfil">Phone Number : +6281394980513</string>
    <string name="birthProfil">Date Of Birth : March, 01 1994</string>
    <string name="addressProfil">Address : Lorem Ipsum, Lorem Ipsum</string>
    <string name="alergicProfil">Alergic : Lorem Ipsum, Lorem Ipsum</string>
    <string name="medicalHistoryProfil">Medical History : Lorem Ipsum, Lorem Ipsum</string>
    <string name="changePassword">Change Password : Lorem Ipsum</string>
    <string name="hospitalAddress">Jalan Raya Kopo No. 161, Situsaeur, Bojongloa Kidul, Kota Bandung, Jawa Barat</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
