<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorMain"
    tools:context="com.stringxdeveloper.hidoctor.DoctorActivity">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="HI DOCT"
            android:textSize="50sp"
            android:textColor="@color/white"/>
        <ImageView
            android:layout_width="60dp"
            android:layout_height="70dp"
            android:src="@drawable/logo"
            android:scaleType="centerCrop"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="R"
            android:textSize="50sp"
            android:textColor="@color/white"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/white"/>
    <LinearLayout
        android:id="@+id/menuBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:layout_gravity="center">
        <ImageButton
            android:id="@+id/hospital"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:src="@drawable/mark"
            android:background="@color/colorMain"/>
        <ImageButton
            android:id="@+id/doctor"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:src="@drawable/stetoskop"
            android:background="@color/colorMain"/>
        <ImageButton
            android:id="@+id/help"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:src="@drawable/ask"
            android:background="@color/colorMain"/>
        <ImageButton
            android:id="@+id/account"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:alpha="0.8"
            android:layout_height="wrap_content"
            android:src="@drawable/contact"
            android:background="@color/colorMain"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:padding="16dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical"
            android:padding="1dp">
        <ImageView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:src="@drawable/bluecontact"
            android:padding="16dp"
            android:id="@+id/profilPic"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/profilName"
                android:text="Justin Drew Bieber"
                android:textSize="20sp"
                android:textColor="@color/black"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/profilIdName"
                android:text="\@justinbieber"
                android:textStyle="italic"
                android:textSize="18sp"
                android:textColor="@color/colorMain"
                />
        </LinearLayout>
        <ImageView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/profilGender"
            android:src="@drawable/bluemale52"/>
    </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"
            android:layout_margin="5dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/emailProfil"
            android:textColor="@color/black"
            android:text="@string/emailProfil"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"
            android:layout_margin="5dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/phoneProfil"
            android:textColor="@color/black"
            android:text="@string/phoneProfil"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"
            android:layout_margin="5dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/birthProfil"
            android:textColor="@color/black"
            android:text="@string/birthProfil"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"
            android:layout_margin="5dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/addressProfil"
            android:textColor="@color/black"
            android:text="@string/addressProfil"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"
            android:layout_margin="5dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/alergicProfil"
            android:textColor="@color/black"
            android:text="@string/alergicProfil"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"
            android:layout_margin="5dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/medicalHistoryProfil"
            android:textColor="@color/black"
            android:text="@string/medicalHistoryProfil"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"
            android:layout_margin="5dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/changePassword"
            android:textColor="@color/black"
            android:inputType="textPassword"
            android:textSize="15sp"
            android:text="@string/changePassword"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorMain"
                android:textColor="@color/white"
                android:text="Edit"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorMain"
                android:textColor="@color/white"
                android:layout_alignParentRight="true"
                android:text="Log Out"/>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>